--- a/op-chain/Dockerfile
+++ b/op-chain/Dockerfile
@@ -1,23 +1,19 @@
-# Base image
-FROM node:14 AS op-chain
+# Start with an Alpine base image
+FROM alpine AS op-chain
 
-# Set working directory
+# Set the working directory
 WORKDIR /app
 
-# Clone the repository
+# Install git, Node.js, and other potential dependencies
+RUN apk add --no-cache git nodejs npm
+
+# Upgrade npm to the desired version
+RUN npm install -g npm@9.6.5
+
+# Check npm version to verify
+RUN npm -v
+
+# Clone the optimism repository
 RUN git clone https://github.com/celestiaorg/optimism.git .
 
-# Install dependencies
-RUN curl -o- https://raw.githubusercontent.com/nvm-sh/nvm/v0.38.0/install.sh | bash && \
-    export NVM_DIR="$HOME/.nvm" && \
-    [ -s "$NVM_DIR/nvm.sh" ] && \. "$NVM_DIR/nvm.sh" && \
-    nvm install && \
-    nvm use && \
-    yarn install && \
-    yarn build
-
-# Expose the necessary port(s). Replace 3000 with the port number(s) your app runs on.
-# EXPOSE 3000
-
-# CMD to run your application. This example assumes a package.json script "start" is defined.
-# CMD ["/bin/bash", "devnet-up.sh"]
+# Optionally, continue with any other steps you want
